ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host-django
  namespace: django-todo-app
spec:
  rules:
  - host: "django-todo-app.info"
    http:
      paths:
       - pathType: Prefix
         path: "/"
         backend:
           service:
             name: django-todo-service
             port:
               number: 80
